test/cases/parser/DottedTypeErr.errors
src/DottedTypeErr.b:5:15: Syntax error (expected ';')
